<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="registered"
            type="com.example.a15910.mscellaneous.activity.RegisteredActivity"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--账号-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/la_username"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/te_username"
                android:maxLength="11"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username"/>

        </android.support.design.widget.TextInputLayout>

        <!--账号-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/la_phonenumber"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/la_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/te_phonenumber"
                android:maxLength="11"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phonenumber"/>

        </android.support.design.widget.TextInputLayout>

        <!--密码-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/la_password1"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/la_phonenumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_open_close_eye"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/te_password1"
                android:maxLength="6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:hint="@string/password"/>

        </android.support.design.widget.TextInputLayout>

        <!--密码-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/la_password2"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/la_password1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_open_close_eye"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/te_password2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="6"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/bt_registered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_login_bt"
            android:onClick="@{()->registered.check()}"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/la_password2" />

    </android.support.constraint.ConstraintLayout>
</layout>